fix: goal item alignment

--- a/client/source/components/goal-item/goal-item.module.css
+++ b/client/source/components/goal-item/goal-item.module.css
@@ -59,7 +59,6 @@
 }
 
 .scrollSnapWrapper {
-  position: relative;
   display: grid;
   border-radius: 20px;
   opacity: var(--goal-scroll-visibility);
@@ -67,34 +66,16 @@
   background-color: var(--bg-color);
   transition-duration: var(--default-duration);
   transition-property: scale, opacity;
-  grid-template-columns: 40px 1fr auto;
-  grid-template-rows: 0.5 1fr;
+  grid-template-columns: 40px 1fr 40px;
   padding-inline: 15px 20px;
   padding-block: 12px;
   column-gap: 8px;
-  row-gap: 2px;
   place-content: center;
   scroll-snap-align: center;
 
   &:active {
     scale: 0.97;
   }
-
-  &::before {
-    display: block;
-    width: 27px;
-    margin-top: 10%;
-    content: '';
-    justify-self: center;
-  }
-}
-
-.cancelBtn {
-  position: absolute;
-  right: 15px;
-  align-self: center;
-  border: none;
-  background: transparent;
 }
 
 .icon {
@@ -102,23 +83,29 @@
   justify-self: center;
 }
 
+.cancelBtn {
+  border: none;
+  background: transparent;
+  grid-area: 1 / 3;
+}
+
 .goalIcon {
-  position: absolute;
-  top: 35%;
-  left: 18px;
-  margin-top: 0;
+  align-self: center;
+  grid-row-start: 1;
+  grid-row-end: 3;
+  grid-column: 1;
 }
 
 .title {
   align-self: end;
+  align-self: center;
   font: var(--base-bold);
-  grid-row: 1;
-  grid-column: 2;
+  grid-area: 1 / 2;
 }
 
 .instruction {
   align-self: start;
+  margin-block-start: -0.15lh;
   font: var(--small-regular);
-  grid-row: 2;
-  grid-column: 2;
+  grid-area: 2 / 2;
 }
